--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 0.1-fabric-1.19
 	maven_group = net.entropicequanimity
-	archives_base_name = CultivationEra
+	archives_base_name = cultera
 
 # Dependencies
 	fabric_version=0.55.1+1.19
